# simulatte-popscale

./: .gitignore  AGENTS.md  CLAUDE.md  SPEC_SEEDED_GENERATION.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: lint.yml  redeploy-engine.yml  tests.yml
benchmarks/delhi_2025/: README.md  delhi_2025_benchmark.py
benchmarks/us_2024_swing/: us_2024_swing_benchmark.py
benchmarks/wb_2026/: ENGINE_CAPACITY_NOTE.md  POST_ELECTION_TRACKING.md  WB2026_METHODOLOGY.md  wb_2026_benchmark.py
construct-dashboard/: README.md
docs/: CODEBASE_HEALTH.md
docs/adr/: ADR-001-pg-as-external-dependency.md  ADR-002-seeded-generation-architecture.md  ADR-003-pure-python-analytics-no-scipy.md
engineering/: POST_ELECTION_CAPTIONS.md  render_wb_cluster_maps.py  render_wb_per_ac.py  wb_2026_postmortem_deck.pptx  wb_postmortem_deck.js  wb_postmortem_doc.js  wb_postmortem_slide.js
engineering/briefs/: BRIEF-001-cost-observability.md  BRIEF-002-guardrails.md  BRIEF-003-manifesto-sensitivity.md  BRIEF-004-credit-detector.md  BRIEF-008-cost-dashboard-mvp.md  (+22 more)
popscale/: __init__.py  environment.py
scripts/: kill_prior_runs.py
tests/: conftest.py  test_alerts.py  test_geographies.py  test_parity_validator.py  test_pid_lock.py  test_seeded_generation.py  test_variance_signal.py  test_variant_generator.py  test_week10_study.py  test_week1_integration.py  test_week2_orchestration.py  test_week3_analytics.py  test_week4_hardening.py  test_week5_social.py  test_week6_events.py  test_week7_calibration.py  test_week8_environment.py  test_week9_generation.py
(+98 files in other folders)
